--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -231,10 +231,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X, y = train.drop('SalePrice', axis=1), train.SalePrice"
+   ]
   }
  ],
  "metadata": {
