--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -273,26 +273,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "PoolQC         1453\n",
+       "MiscFeature    1406\n",
+       "Alley          1369\n",
+       "Fence          1179\n",
+       "FireplaceQu     690\n",
        "LotFrontage     259\n",
        "GarageType       81\n",
-       "GarageCond       81\n",
        "GarageYrBlt      81\n",
-       "GarageFinish     81\n",
        "GarageQual       81\n",
-       "BsmtFinType2     38\n",
-       "BsmtExposure     38\n",
-       "BsmtFinType1     37\n",
-       "BsmtCond         37\n",
+       "GarageCond       81\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +511,7 @@
        "[5 rows x 74 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +549,7 @@
        "             tree_method='exact', validate_parameters=1, verbosity=None)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,22 +566,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE =  16402.437285958906\n"
+      "RMSE =  35556.32015\n"
      ]
     }
    ],
    "source": [
     "y_pred = model.predict(X_test)\n",
-    "from sklearn.metrics import mean_absolute_error\n",
-    "err = mean_absolute_error(y_pred, y_test)\n",
-    "print(\"MSE = \", err)"
+    "from sklearn.metrics import mean_squared_error\n",
+    "rmse = (mean_squared_error(y_pred, y_test))**(1/2)\n",
+    "print(\"RMSE = \", round(rmse, 5))"
    ]
   },
   {
